--- a/base.css
+++ b/base.css
@@ -1,11 +1,11 @@
 @font-face {
     font-family: roboto;
-    src: url("static/RobotoMono-Medium.ttf");
+    src: url("Ubuntu/Ubuntu-Regular.ttf");
 }
 
 @font-face {
     font-family: roboto-bold;
-    src: url("static/RobotoMono-Bold.ttf");
+    src: url("Ubuntu/Ubuntu-Bold.ttf");
 }
 
 .table-desk {
@@ -13,7 +13,7 @@
     color: white;
     font-family: roboto;
     font-size: 2em;
-    border-radius: 60px;
+    /*border-radius: 60px;*/
     column-gap: 2vw;
     border-collapse: collapse;
     width: 100%;
@@ -28,16 +28,17 @@
 }
 
 body {
-    margin: 2em;
+    margin: 0;
     padding: 0;
     background: lightblue;
+    height: 100%;
 }
 
 .table-desk tr {
 /*    display: flex;
     flex-direction: row;
     justify-content: space-between;*/
-    border-radius: 70px;
+/*    border-radius: 70px;*/
     border-bottom: 2px solid gray;
 /*    padding: 2em;*/
 }
@@ -45,7 +46,7 @@ body {
 
 .table-desk th {
     padding: 2em;
-    row-span: 2;
+    row-span: 4;
 }
 
 .table-desk td {
@@ -69,7 +70,7 @@ body {
 .pair-list p {
     max-width: 100%;
     max-height: 100%;
-    text-align: left;
+    text-align: center;
 }
 
 .pair-list p:after {
